# physics-engine

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build_and_run.sh  gen_docs.sh
devlog/: devlog.tex
include/: pch.h
include/physics_engine/: physics_engine.h
src/: main.cpp  main.h
src/physics_engine/: physics_engine.cpp
src/rendering/: glad.c
